--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 # Defining the exact version will make sure things don't break
-sphinx==7.0.1
-sphinx_rtd_theme
+sphinx==6.2.1
+sphinx_rtd_theme==1.2.2
 myst-parser==2.0.0
 sphinx-mathjax-offline
